--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "svelte dev",
-		"build": "svelte build"
+		"build": "svelte build",
+		"format": "prettier --write ./**/*.{svelte,js}"
 	},
 	"devDependencies": {
 		"@snowpack/plugin-postcss": "1.0.7",
@@ -12,8 +13,10 @@
 		"@sveltejs/snowpack-config": "0.0.5",
 		"autoprefixer": "10.0.2",
 		"cssnano": "4.1.10",
-		"postcss": "8.1.9",
+		"postcss": "8.1.10",
 		"postcss-cli": "8.3.0",
+		"prettier": "2.2.0",
+		"prettier-plugin-svelte": "1.4.1",
 		"svelte": "3.29.7",
 		"tailwindcss": "2.0.1"
 	},
