--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"postcss": "8.1.10",
 		"postcss-cli": "8.3.0",
 		"prettier": "2.2.0",
-		"prettier-plugin-svelte": "1.4.1",
-		"svelte": "3.29.7",
+		"prettier-plugin-tailwind": "2.2.0",
+		"svelte": "3.30.0",
 		"tailwindcss": "2.0.1"
 	},
 	"resolutions": {
