--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"scripts": {
 		"dev": "svelte dev",
 		"build": "svelte build",
-		"format": "prettier --write ./**/*.{svelte,js}"
+		"format": "prettier --write ./**/*.{svelte,js} --ignore-path .gitignore"
 	},
 	"devDependencies": {
 		"@snowpack/plugin-postcss": "1.0.7",
