--- a/package.json
+++ b/package.json
@@ -4,27 +4,33 @@
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
-		"format": "prettier --write ./**/*.{svelte,js} --ignore-path .gitignore",
-		"cypress": "cypress run",
-		"test": "run-p -r dev cypress"
+		"format": "prettier --write ./**/*.{svelte,js,mjs} --ignore-path .gitignore",
+		"test": "uvu tests -i setup"
 	},
 	"devDependencies": {
 		"@snowpack/plugin-postcss": "1.0.7",
-		"@sveltejs/adapter-node": "0.0.16",
+		"@sveltejs/adapter-static": "0.0.16",
 		"@sveltejs/kit": "0.0.27",
 		"@sveltejs/snowpack-config": "0.0.7",
 		"autoprefixer": "10.0.4",
+		"axios": "0.21.0",
 		"cssnano": "4.1.10",
-		"cypress": "6.0.0",
 		"npm-run-all": "4.1.5",
+		"polka": "0.5.2",
 		"postcss": "8.1.10",
 		"postcss-cli": "8.3.0",
+		"postcss-import": "13.0.0",
 		"prettier": "2.2.1",
 		"prettier-plugin-tailwind": "2.2.2",
+		"sirv": "1.0.7",
 		"svelte": "3.30.0",
-		"tailwindcss": "2.0.1"
+		"tailwindcss": "2.0.1",
+		"uvu": "0.5.0"
 	},
 	"resolutions": {
 		"snowpack": "2.17.0"
+	},
+	"engines": {
+		"node": ">=14"
 	}
 }
