--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"polka": "0.5.2",
 		"postcss": "8.1.10",
 		"postcss-cli": "8.3.0",
-		"postcss-load-config": "^3.0.0",
+		"postcss-load-config": "3.0.0",
 		"prettier": "2.2.1",
 		"prettier-plugin-tailwind": "2.2.2",
 		"sirv": "1.0.7",
