--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
 		"test": "uvu tests -i setup"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "0.0.17",
-		"@sveltejs/kit": "0.0.29",
-		"@sveltejs/snowpack-config": "0.0.7",
+		"@sveltejs/adapter-static": "1.0.0-next.0",
+		"@sveltejs/kit": "1.0.0-next.0",
+		"@sveltejs/snowpack-config": "1.0.0-next.0",
 		"autoprefixer": "10.0.4",
 		"cssnano": "4.1.10",
 		"httpie": "2.0.0-next.12",
@@ -20,7 +20,7 @@
 		"prettier": "2.2.1",
 		"prettier-plugin-tailwind": "2.2.2",
 		"sirv": "1.0.7",
-		"svelte": "3.30.1",
+		"svelte": "3.31.0",
 		"svelte-preprocess": "4.6.1",
 		"tailwindcss": "2.0.1",
 		"uvu": "0.5.1"
