--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
+		"adapt": "svelte-kit adapt",
 		"start": "svelte-kit start",
 		"preformat": "rustywind --write ./src/",
 		"format": "prettier --write './**/*.{svelte,html,ts,js,mjs}' --ignore-path .gitignore",
