--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
 		"adapt": "svelte-kit adapt",
 		"start": "svelte-kit start",
 		"preformat": "rustywind --write ./src/",
-		"format": "prettier --write '**/*.{svelte,html,ts,js,mjs,md}' .github/**/*.yml --ignore-path .gitignore",
-		"pretest": "svelte-check",
+		"format": "prettier --write '**/*.{svelte,html,js,mjs,md}' .github/**/*.yml --ignore-path .gitignore",
 		"test": "uvu tests -i setup"
 	},
 	"devDependencies": {
 		"@snowpack/plugin-postcss": "1.0.11",
-		"@snowpack/plugin-typescript": "1.1.1",
 		"@sveltejs/adapter-static": "1.0.0-next.1",
-		"@sveltejs/kit": "1.0.0-next.5",
+		"@sveltejs/kit": "1.0.0-next.11",
 		"@sveltejs/snowpack-config": "1.0.0-next.0",
 		"autoprefixer": "10.1.0",
 		"cssnano": "4.1.10",
@@ -22,19 +20,14 @@
 		"polka": "0.5.2",
 		"postcss": "8.2.1",
 		"postcss-cli": "8.3.1",
+		"postcss-load-config": "3.0.0",
 		"prettier": "2.2.1",
 		"prettier-plugin-svelte": "1.4.2",
 		"rustywind": "0.7.0",
 		"sirv": "1.0.10",
 		"svelte": "3.31.0",
-		"svelte-check": "1.1.22",
 		"tailwindcss": "2.0.2",
-		"tslib": "2.0.3",
-		"typescript": "4.1.3",
 		"uvu": "0.5.1"
-	},
-	"resolutions": {
-		"snowpack": "2.17.0"
 	},
 	"engines": {
 		"node": ">=14"
