--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
 		"test": "uvu tests -i setup"
 	},
 	"devDependencies": {
-		"@snowpack/plugin-postcss": "1.0.11",
+		"@snowpack/plugin-postcss": "1.1.0",
 		"@sveltejs/adapter-static": "1.0.0-next.1",
-		"@sveltejs/kit": "1.0.0-next.11",
-		"@sveltejs/snowpack-config": "1.0.0-next.0",
-		"autoprefixer": "10.1.0",
+		"@sveltejs/kit": "1.0.0-next.24",
+		"@sveltejs/snowpack-config": "1.0.0-next.1",
+		"autoprefixer": "10.2.1",
 		"cssnano": "4.1.10",
 		"httpie": "2.0.0-next.12",
+		"node-html-parser": "2.0.2",
 		"polka": "0.5.2",
-		"postcss": "8.2.1",
+		"postcss": "8.2.4",
 		"postcss-cli": "8.3.1",
 		"postcss-load-config": "3.0.0",
 		"prettier": "2.2.1",
-		"prettier-plugin-svelte": "1.4.2",
-		"rustywind": "0.7.0",
+		"prettier-plugin-svelte": "2.1.0",
+		"rustywind": "0.8.0",
 		"sirv": "1.0.10",
-		"svelte": "3.31.0",
+		"svelte": "3.31.2",
 		"tailwindcss": "2.0.2",
 		"uvu": "0.5.1"
 	},
