--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
 		"adapt": "svelte-kit adapt",
 		"start": "svelte-kit start",
 		"preformat": "rustywind --write ./src/",
-		"format": "prettier --write '**/*.{svelte,html,js,mjs,md}' .github/**/*.yml --ignore-path .gitignore",
+		"format": "prettier --write '**/*.{svelte,html,js,mjs,cjs,md}' .github/**/*.yml --ignore-path .gitignore",
 		"test": "uvu tests -i setup"
 	},
 	"devDependencies": {
 		"@snowpack/plugin-postcss": "1.1.0",
 		"@sveltejs/adapter-static": "1.0.0-next.1",
-		"@sveltejs/kit": "1.0.0-next.29",
+		"@sveltejs/kit": "1.0.0-next.31",
 		"@sveltejs/snowpack-config": "1.0.0-next.1",
 		"autoprefixer": "10.2.4",
 		"cssnano": "4.1.10",
@@ -22,7 +22,7 @@
 		"postcss": "8.2.4",
 		"postcss-cli": "8.3.1",
 		"prettier": "2.2.1",
-		"prettier-plugin-svelte": "2.1.1",
+		"prettier-plugin-svelte": "2.1.2",
 		"rustywind": "0.8.0",
 		"sirv": "1.0.11",
 		"svelte": "3.32.1",
