--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
 	},
 	"devDependencies": {
 		"@snowpack/plugin-postcss": "1.1.0",
-		"@sveltejs/adapter-static": "1.0.0-next.1",
-		"@sveltejs/kit": "1.0.0-next.31",
+		"@sveltejs/adapter-static": "1.0.0-next.2",
+		"@sveltejs/kit": "1.0.0-next.34",
 		"@sveltejs/snowpack-config": "1.0.0-next.3",
 		"autoprefixer": "10.2.4",
 		"cssnano": "4.1.10",
 		"httpie": "2.0.0-next.13",
 		"node-html-parser": "2.1.0",
 		"polka": "0.5.2",
-		"postcss": "8.2.5",
+		"postcss": "8.2.6",
 		"postcss-cli": "8.3.1",
 		"prettier": "2.2.1",
 		"prettier-plugin-svelte": "2.1.4",
@@ -31,5 +31,6 @@
 	},
 	"engines": {
 		"node": ">=14"
-	}
+	},
+	"type": "module"
 }
