--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
+	"name": "sveltekit-tailwindcss-prettier-template",
 	"private": true,
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
-		"adapt": "svelte-kit adapt",
 		"start": "svelte-kit start",
 		"preformat": "rustywind --write ./src/",
 		"format": "prettier --write '**/*.{svelte,html,js,mjs,cjs,md}' .github/**/*.yml --ignore-path .gitignore",
 		"test": "uvu tests -i setup"
 	},
 	"devDependencies": {
-		"@snowpack/plugin-postcss": "1.1.0",
 		"@sveltejs/adapter-static": "1.0.0-next.2",
-		"@sveltejs/kit": "1.0.0-next.34",
-		"@sveltejs/snowpack-config": "1.0.0-next.3",
+		"@sveltejs/kit": "1.0.0-next.37",
 		"autoprefixer": "10.2.4",
 		"cssnano": "4.1.10",
 		"httpie": "2.0.0-next.13",
@@ -22,12 +20,13 @@
 		"postcss": "8.2.6",
 		"postcss-cli": "8.3.1",
 		"prettier": "2.2.1",
-		"prettier-plugin-svelte": "2.1.6",
+		"prettier-plugin-svelte": "2.2.0",
 		"rustywind": "0.8.0",
 		"sirv": "1.0.11",
-		"svelte": "3.34.0",
+		"svelte": "3.35.0",
 		"tailwindcss": "2.0.3",
-		"uvu": "0.5.1"
+		"uvu": "0.5.1",
+		"vite": "2.0.5"
 	},
 	"engines": {
 		"node": ">=14"
