--- a/package.json
+++ b/package.json
@@ -1,35 +1,32 @@
 {
-	"name": "sveltekit-tailwindcss-prettier-template",
-	"private": true,
-	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"start": "svelte-kit start",
-		"preformat": "rustywind --write ./src/",
-		"format": "prettier --write '**/*.{svelte,html,js,mjs,cjs,md}' .github/**/*.yml --ignore-path .gitignore",
-		"test": "uvu tests -i setup"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-static": "1.0.0-next.4",
-		"@sveltejs/kit": "1.0.0-next.48",
-		"autoprefixer": "10.2.5",
-		"cssnano": "5.0.1",
-		"httpie": "2.0.0-next.13",
-		"node-html-parser": "3.2.0",
-		"polka": "0.5.2",
-		"postcss": "8.2.15",
-		"postcss-cli": "8.3.1",
-		"prettier": "2.2.1",
-		"prettier-plugin-svelte": "2.3.0",
-		"rustywind": "0.8.1",
-		"sirv": "1.0.11",
-		"svelte": "3.37.0",
-		"tailwindcss": "2.1.1",
-		"uvu": "0.5.1",
-		"vite": "2.2.4"
-	},
-	"engines": {
-		"node": ">=14"
-	},
-	"type": "module"
+  "name": "sveltekit-tailwindcss-prettier-template",
+  "private": true,
+  "scripts": {
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview",
+    "preformat": "rustywind --write ./src/",
+    "lint": "prettier --check . --ignore-path .gitignore",
+    "format": "prettier --write . --ignore-path .gitignore",
+    "test": "uvu tests -i setup"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-static": "1.0.0-next.9",
+    "@sveltejs/kit": "1.0.0-next.107",
+    "autoprefixer": "10.2.5",
+    "cssnano": "5.0.2",
+    "httpie": "2.0.0-next.13",
+    "node-html-parser": "3.3.0",
+    "polka": "0.5.2",
+    "postcss": "8.2.15",
+    "postcss-cli": "8.3.1",
+    "prettier": "2.3.0",
+    "prettier-plugin-svelte": "2.3.0",
+    "rustywind": "0.8.1",
+    "sirv": "1.0.11",
+    "svelte": "3.38.2",
+    "tailwindcss": "2.1.2",
+    "uvu": "0.5.1"
+  },
+  "type": "module"
 }
